--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 
-        <title>Ban appeal</title>
+        <title>Belu World Ban appeal</title>
     </head>
     <body class="h-100 d-flex flex-column justify-content-center align-items-stretch">
         <div class="jumbotron text-center mb-0">
-            <h1>Ban appeal</h1>
+            <h1>Belu World Ban appeal</h1>
         </div>
 
         <div class="flex-fill text-center d-flex h-100 justify-content-center align-items-center">
